--- a/src/app/MyComponents/todo-item/todo-item.component.html
+++ b/src/app/MyComponents/todo-item/todo-item.component.html
@@ -1,9 +1,10 @@
 <div class="container border my-3 ">
-  <h5>{{todo.title}}</h5>
-  <p class="mx-5">{{todo.desc}}</p>
+  <h5 [ngClass]="{'strike' : !todo.active}">{{todo.title}}</h5>
+  <p class="mx-5" [ngClass]="{'strike' : !todo.active}">{{todo.desc}}</p>
   <div class="mb-3 form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1" (click)="onCheckboxClick(todo)">
-    <label class="form-check-label" for="exampleCheck1">Done</label>
+    <input type="checkbox" class="form-check-input" id="todoId{{i}}" 
+    [checked]="!todo.active" (click)="onCheckboxClick(todo)">
+    <label class="form-check-label" for="todoId{i}}">Done</label>
   </div>
   <button class="btn btn-danger btn-sm" (click)="onClick(todo)">Delete</button>
 </div>
