--- a/src/app/MyComponents/todos/todos.component.html
+++ b/src/app/MyComponents/todos/todos.component.html
@@ -4,9 +4,10 @@
 
   <div *ngIf="this.todos.length === 0; else elseBlock">No todos to display...</div>
   <ng-template #elseBlock>
-    <div *ngFor="let todo of todos">
+    <div *ngFor="let todo of todos; index as i">
       <!-- <app-todo-item>{{todo.sno}} - {{todo.title}} - {{todo.desc}}</app-todo-item> -->
-      <app-todo-item [todo]="todo" (todoDelete)="deleteTodo($event)"></app-todo-item>
+      <app-todo-item [todo]="todo" [i]="i" (todoDelete)="deleteTodo($event)" 
+      (todoCheckbox)="toggleTodo($event)"></app-todo-item>
     </div>
 
   </ng-template>
